# sonin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  snn.py
snn/: main.py
snn/model/: dna.py  hypercube.py  neuron.py  position.py
sonin/: main.py  sonin_math.py  sonin_random.py  tree.py
sonin/model/: dna.py  evolution.py  facilitation.py  fate.py  gear.py  growth.py  hypercube.py  lesson.py  math.py  metric.py  mind.py  mind_factory.py  mutation.py  neuron.py  paint.py  signal.py  step.py  stimulation.py  storage.py  synapse.py
tests/sonin/: test_sonin_math.py  test_sonin_random.py
tests/sonin/model/: test_dna.py  test_facilitation.py  test_fate.py  test_gear.py  test_growth.py  test_hypercube.py  test_math.py  test_metric.py  test_mind.py  test_mutation.py  test_neuron.py  test_paint.py  test_stimulation.py
