[project]
name = "sonin"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Tashjian",email = "thewopple@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.1,<3.11.0)",
    "pydantic (>=2.12.3,<2.13.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = "sonin"
testpaths = "tests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
